@@ -1,16 +1,35 @@
+/*
+* Licensed to the Apache Software Foundation (ASF) under one or more
+* contributor license agreements.  See the NOTICE file distributed with
+* this work for additional information regarding copyright ownership.
+* The ASF licenses this file to You under the Apache License, Version 2.0
+* (the "License"); you may not use this file except in compliance with
+* the License.  You may obtain a copy of the License at
+*
+*    http://www.apache.org/licenses/LICENSE-2.0
+*
+* Unless required by applicable law or agreed to in writing, software
+* distributed under the License is distributed on an "AS IS" BASIS,
+* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+* See the License for the specific language governing permissions and
+* limitations under the License.
+*/
 package io.github.zhztheplayer.velox4j.config;
 
-import com.fasterxml.jackson.annotation.JsonCreator;
-import com.fasterxml.jackson.annotation.JsonGetter;
-import com.fasterxml.jackson.annotation.JsonProperty;
-import io.github.zhztheplayer.velox4j.serializable.ISerializable;
-
+import java.io.Serializable;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
 
+import com.fasterxml.jackson.annotation.JsonCreator;
+import com.fasterxml.jackson.annotation.JsonGetter;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import com.google.common.collect.ImmutableList;
+
+import io.github.zhztheplayer.velox4j.serializable.ISerializable;
+
 public class Config extends ISerializable {
-  private static final Config EMPTY = new Config(List.of());
+  private static final Config EMPTY = new Config(ImmutableList.of());
 
   public static Config empty() {
     return EMPTY;
@@ -24,8 +43,10 @@ public class Config extends ISerializable {
   }
 
   public static Config create(Map<String, String> values) {
-    return new Config(values.entrySet().stream()
-        .map(e -> new Entry(e.getKey(), e.getValue())).collect(Collectors.toList()));
+    return new Config(
+        values.entrySet().stream()
+            .map(e -> new Entry(e.getKey(), e.getValue()))
+            .collect(Collectors.toList()));
   }
 
   @JsonGetter("values")
@@ -33,7 +54,7 @@ public class Config extends ISerializable {
     return values;
   }
 
-  public static class Entry {
+  public static class Entry implements Serializable {
     private final String key;
     private final String value;
 
