@@ -1,4 +1,33 @@
+/*
+* Licensed to the Apache Software Foundation (ASF) under one or more
+* contributor license agreements.  See the NOTICE file distributed with
+* this work for additional information regarding copyright ownership.
+* The ASF licenses this file to You under the Apache License, Version 2.0
+* (the "License"); you may not use this file except in compliance with
+* the License.  You may obtain a copy of the License at
+*
+*    http://www.apache.org/licenses/LICENSE-2.0
+*
+* Unless required by applicable law or agreed to in writing, software
+* distributed under the License is distributed on an "AS IS" BASIS,
+* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+* See the License for the specific language governing permissions and
+* limitations under the License.
+*/
 package io.github.zhztheplayer.velox4j.query;
+
+import java.io.File;
+import java.io.IOException;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.List;
+import java.util.UUID;
+import java.util.stream.Collectors;
+
+import com.fasterxml.jackson.databind.JsonNode;
+import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableMap;
+import org.junit.*;
 
 import io.github.zhztheplayer.velox4j.Velox4j;
 import io.github.zhztheplayer.velox4j.aggregate.Aggregate;
@@ -6,74 +35,56 @@ import io.github.zhztheplayer.velox4j.aggregate.AggregateStep;
 import io.github.zhztheplayer.velox4j.collection.Streams;
 import io.github.zhztheplayer.velox4j.config.Config;
 import io.github.zhztheplayer.velox4j.config.ConnectorConfig;
-import io.github.zhztheplayer.velox4j.connector.Assignment;
-import io.github.zhztheplayer.velox4j.connector.ColumnType;
-import io.github.zhztheplayer.velox4j.connector.CommitStrategy;
-import io.github.zhztheplayer.velox4j.connector.CompressionKind;
-import io.github.zhztheplayer.velox4j.connector.ConnectorInsertTableHandle;
-import io.github.zhztheplayer.velox4j.connector.ExternalStream;
-import io.github.zhztheplayer.velox4j.connector.ExternalStreamConnectorSplit;
-import io.github.zhztheplayer.velox4j.connector.ExternalStreamTableHandle;
-import io.github.zhztheplayer.velox4j.connector.FileFormat;
-import io.github.zhztheplayer.velox4j.connector.HiveColumnHandle;
-import io.github.zhztheplayer.velox4j.connector.HiveConnectorSplit;
-import io.github.zhztheplayer.velox4j.connector.HiveInsertTableHandle;
-import io.github.zhztheplayer.velox4j.connector.HiveTableHandle;
-import io.github.zhztheplayer.velox4j.connector.LocationHandle;
+import io.github.zhztheplayer.velox4j.connector.*;
 import io.github.zhztheplayer.velox4j.data.BaseVectorTests;
 import io.github.zhztheplayer.velox4j.data.RowVector;
 import io.github.zhztheplayer.velox4j.exception.VeloxException;
 import io.github.zhztheplayer.velox4j.expression.CallTypedExpr;
 import io.github.zhztheplayer.velox4j.expression.ConstantTypedExpr;
 import io.github.zhztheplayer.velox4j.expression.FieldAccessTypedExpr;
-import io.github.zhztheplayer.velox4j.iterator.DownIterator;
-import io.github.zhztheplayer.velox4j.iterator.DownIterators;
-import io.github.zhztheplayer.velox4j.iterator.UpIterator;
-import io.github.zhztheplayer.velox4j.iterator.UpIterators;
+import io.github.zhztheplayer.velox4j.iterator.*;
 import io.github.zhztheplayer.velox4j.jni.JniWorkspace;
 import io.github.zhztheplayer.velox4j.join.JoinType;
-import io.github.zhztheplayer.velox4j.memory.AllocationListener;
+import io.github.zhztheplayer.velox4j.memory.BytesAllocationListener;
 import io.github.zhztheplayer.velox4j.memory.MemoryManager;
 import io.github.zhztheplayer.velox4j.plan.*;
 import io.github.zhztheplayer.velox4j.serde.Serde;
 import io.github.zhztheplayer.velox4j.session.Session;
 import io.github.zhztheplayer.velox4j.sort.SortOrder;
-import io.github.zhztheplayer.velox4j.test.ResourceTests;
-import io.github.zhztheplayer.velox4j.test.SampleQueryTests;
-import io.github.zhztheplayer.velox4j.test.TpchTests;
-import io.github.zhztheplayer.velox4j.test.UpIteratorTests;
-import io.github.zhztheplayer.velox4j.test.Velox4jTests;
-import io.github.zhztheplayer.velox4j.type.BigIntType;
-import io.github.zhztheplayer.velox4j.type.BooleanType;
-import io.github.zhztheplayer.velox4j.type.RowType;
-import io.github.zhztheplayer.velox4j.type.Type;
-import io.github.zhztheplayer.velox4j.type.VarCharType;
+import io.github.zhztheplayer.velox4j.test.*;
+import io.github.zhztheplayer.velox4j.test.dataset.TestDataFile;
+import io.github.zhztheplayer.velox4j.test.dataset.tpch.TpchDatasets;
+import io.github.zhztheplayer.velox4j.test.dataset.tpch.TpchTableName;
+import io.github.zhztheplayer.velox4j.type.*;
 import io.github.zhztheplayer.velox4j.variant.BigIntValue;
 import io.github.zhztheplayer.velox4j.variant.BooleanValue;
+import io.github.zhztheplayer.velox4j.window.BoundType;
+import io.github.zhztheplayer.velox4j.window.WindowFrame;
+import io.github.zhztheplayer.velox4j.window.WindowFunction;
+import io.github.zhztheplayer.velox4j.window.WindowType;
 import io.github.zhztheplayer.velox4j.write.TableWriteTraits;
-import org.junit.*;
-
-import java.io.File;
-import java.io.IOException;
-import java.util.*;
-import java.util.concurrent.BlockingQueue;
-import java.util.concurrent.LinkedBlockingQueue;
-import java.util.stream.Collectors;
 
 public class QueryTest {
-  public static final String HIVE_CONNECTOR_ID = "connector-hive";
+  private static final String HIVE_CONNECTOR_ID = "connector-hive";
+  private static TestDataFile NATION_FILE;
+  private static TestDataFile REGION_FILE;
+  private static BytesAllocationListener allocationListener;
   private static MemoryManager memoryManager;
   private static Session session;
 
   @BeforeClass
   public static void beforeClass() throws Exception {
     Velox4jTests.ensureInitialized();
-    memoryManager = MemoryManager.create(AllocationListener.NOOP);
+    allocationListener = new BytesAllocationListener();
+    memoryManager = Velox4j.newMemoryManager(allocationListener);
+    NATION_FILE = TpchDatasets.get().get(TpchTableName.NATION);
+    REGION_FILE = TpchDatasets.get().get(TpchTableName.REGION);
   }
 
   @AfterClass
   public static void afterClass() throws Exception {
     memoryManager.close();
+    Assert.assertEquals(0, allocationListener.currentBytes());
   }
 
   @Before
@@ -88,144 +99,171 @@ public class QueryTest {
 
   @Test
   public void testValuesWith2Steps() {
-    final PlanNode values = ValuesNode.create("id-1",
-        List.of(BaseVectorTests.newSampleRowVector(session)), true, 5);
-    final Query query = new Query(values, List.of(), Config.empty(), ConnectorConfig.empty());
+    final PlanNode values =
+        ValuesNode.create(
+            "id-1", ImmutableList.of(BaseVectorTests.newSampleRowVector(session)), true, 5);
+    final Query query = new Query(values, Config.empty(), ConnectorConfig.empty());
     final QueryExecutor exec = session.queryOps().createQueryExecutor(query);
-    final UpIterator itr = exec.execute();
-    SampleQueryTests.assertIterator(itr, 5);
+    final SerialTask task = exec.execute();
+    SampleQueryTests.assertIterator(task, 5);
   }
 
   @Test
   public void testValues() {
-    final PlanNode values = ValuesNode.create("id-1",
-        List.of(BaseVectorTests.newSampleRowVector(session)), true, 5);
-    final Query query = new Query(values, List.of(), Config.empty(), ConnectorConfig.empty());
-    final UpIterator itr = session.queryOps().execute(query);
-    SampleQueryTests.assertIterator(itr, 5);
+    final PlanNode values =
+        ValuesNode.create(
+            "id-1", ImmutableList.of(BaseVectorTests.newSampleRowVector(session)), true, 5);
+    final Query query = new Query(values, Config.empty(), ConnectorConfig.empty());
+    final SerialTask task = session.queryOps().execute(query);
+    SampleQueryTests.assertIterator(task, 5);
   }
 
   @Test
   public void testTableScan1() {
-    final File file = TpchTests.Table.NATION.file();
-    final RowType outputType = TpchTests.Table.NATION.schema();
+    final File file = NATION_FILE.file();
+    final RowType outputType = NATION_FILE.schema();
     final TableScanNode scanNode = newSampleTableScanNode("id-1", outputType);
-    final List<BoundSplit> splits = List.of(
-        newSampleSplit(scanNode, file)
-    );
-    final Query query = new Query(scanNode, splits, Config.empty(), ConnectorConfig.empty());
-    final UpIterator itr = session.queryOps().execute(query);
-    UpIteratorTests.assertIterator(itr)
+    final ConnectorSplit split = newSampleSplit(file);
+    final Query query = new Query(scanNode, Config.empty(), ConnectorConfig.empty());
+    final SerialTask task = session.queryOps().execute(query);
+    task.addSplit(scanNode.getId(), split);
+    task.noMoreSplits(scanNode.getId());
+    UpIteratorTests.assertIterator(task)
         .assertNumRowVectors(1)
-        .assertRowVectorToString(0, ResourceTests.readResourceAsString("query-output/tpch-table-scan-nation.tsv"))
+        .assertRowVectorToString(
+            0, ResourceTests.readResourceAsString("query-output/tpch-table-scan-nation.tsv"))
         .run();
   }
 
-
   @Test
   public void testTableScan2() {
-    final File file = TpchTests.Table.REGION.file();
-    final RowType outputType = TpchTests.Table.REGION.schema();
+    final File file = REGION_FILE.file();
+    final RowType outputType = REGION_FILE.schema();
     final TableScanNode scanNode = newSampleTableScanNode("id-1", outputType);
-    final List<BoundSplit> splits = List.of(
-        newSampleSplit(scanNode, file)
-    );
-    final Query query = new Query(scanNode, splits, Config.empty(), ConnectorConfig.empty());
-    final UpIterator itr = session.queryOps().execute(query);
-    UpIteratorTests.assertIterator(itr)
+    final ConnectorSplit split = newSampleSplit(file);
+    final Query query = new Query(scanNode, Config.empty(), ConnectorConfig.empty());
+    final SerialTask task = session.queryOps().execute(query);
+    task.addSplit(scanNode.getId(), split);
+    task.noMoreSplits(scanNode.getId());
+    UpIteratorTests.assertIterator(task)
         .assertNumRowVectors(1)
-        .assertRowVectorToString(0, ResourceTests.readResourceAsString("query-output/tpch-table-scan-region.tsv"))
+        .assertRowVectorToString(
+            0, ResourceTests.readResourceAsString("query-output/tpch-table-scan-region.tsv"))
         .run();
   }
 
   @Test
   public void testTableScanCollectMultipleRowVectorsLoadInline() {
-    final File file = TpchTests.Table.NATION.file();
-    final RowType outputType = TpchTests.Table.NATION.schema();
+    final File file = NATION_FILE.file();
+    final RowType outputType = NATION_FILE.schema();
     final TableScanNode scanNode = newSampleTableScanNode("id-1", outputType);
-    final List<BoundSplit> splits = List.of(
-        newSampleSplit(scanNode, file)
-    );
+    final ConnectorSplit split = newSampleSplit(file);
     final int maxOutputBatchRows = 7;
-    final Query query = new Query(scanNode, splits, Config.create(
-        Map.of("max_output_batch_rows", String.format("%d", maxOutputBatchRows))),
-        ConnectorConfig.empty());
-    final UpIterator itr = session.queryOps().execute(query);
-    final List<RowVector> allRvs = Streams.fromIterator(UpIterators.asJavaIterator(itr))
-        .map(v -> v.loadedVector().asRowVector())
-        .collect(Collectors.toList());
+    final Query query =
+        new Query(
+            scanNode,
+            Config.create(
+                ImmutableMap.of("max_output_batch_rows", String.format("%d", maxOutputBatchRows))),
+            ConnectorConfig.empty());
+    final SerialTask task = session.queryOps().execute(query);
+    task.addSplit(scanNode.getId(), split);
+    task.noMoreSplits(scanNode.getId());
+    final List<RowVector> allRvs =
+        Streams.fromIterator(UpIterators.asJavaIterator(task))
+            .map(v -> v.flattenedVector().asRowVector())
+            .collect(Collectors.toList());
     Assert.assertTrue(allRvs.size() > 1);
     for (RowVector rv : allRvs) {
       Assert.assertTrue(rv.getSize() <= maxOutputBatchRows);
     }
-    final RowVector appended = session.baseVectorOps().createEmpty(allRvs.get(0).getType()).asRowVector();
+    final RowVector appended =
+        session.baseVectorOps().createEmpty(allRvs.get(0).getType()).asRowVector();
     for (RowVector rv : allRvs) {
       appended.append(rv);
     }
-    Assert.assertEquals(ResourceTests.readResourceAsString("query-output/tpch-table-scan-nation.tsv"), appended.toString());
+    Assert.assertEquals(
+        ResourceTests.readResourceAsString("query-output/tpch-table-scan-nation.tsv"),
+        appended.toString());
   }
 
   @Test
   public void testTableScanCollectMultipleRowVectorsLoadLast() {
-    final File file = TpchTests.Table.NATION.file();
-    final RowType outputType = TpchTests.Table.NATION.schema();
+    final File file = NATION_FILE.file();
+    final RowType outputType = NATION_FILE.schema();
     final TableScanNode scanNode = newSampleTableScanNode("id-1", outputType);
-    final List<BoundSplit> splits = List.of(
-        newSampleSplit(scanNode, file)
-    );
+    final ConnectorSplit split = newSampleSplit(file);
     final int maxOutputBatchRows = 7;
-    final Query query = new Query(scanNode, splits, Config.create(
-        Map.of("max_output_batch_rows", String.format("%d", maxOutputBatchRows))),
-        ConnectorConfig.empty());
-    final UpIterator itr = session.queryOps().execute(query);
-    final List<RowVector> allRvs = Streams.fromIterator(UpIterators.asJavaIterator(itr)).collect(Collectors.toList());
+    final Query query =
+        new Query(
+            scanNode,
+            Config.create(
+                ImmutableMap.of("max_output_batch_rows", String.format("%d", maxOutputBatchRows))),
+            ConnectorConfig.empty());
+    final SerialTask task = session.queryOps().execute(query);
+    task.addSplit(scanNode.getId(), split);
+    task.noMoreSplits(scanNode.getId());
+    final List<RowVector> allRvs =
+        Streams.fromIterator(UpIterators.asJavaIterator(task)).collect(Collectors.toList());
     Assert.assertTrue(allRvs.size() > 1);
     for (int i = 0; i < allRvs.size(); i++) {
       final RowVector rv = allRvs.get(i);
       Assert.assertTrue(rv.getSize() <= maxOutputBatchRows);
       if (i != allRvs.size() - 1) {
         // Vectors except the last one should throw when loading.
-        Assert.assertThrows(VeloxException.class, rv::loadedVector);
+        Assert.assertThrows(VeloxException.class, rv::flattenedVector);
       } else {
         // The last vector can be loaded without errors.
-        rv.loadedVector();
+        rv.flattenedVector();
       }
     }
   }
 
   @Test
   public void testAggregate() {
-    final File file = TpchTests.Table.NATION.file();
-    final RowType outputType = TpchTests.Table.NATION.schema();
+    final File file = NATION_FILE.file();
+    final RowType outputType = NATION_FILE.schema();
     final TableScanNode scanNode = newSampleTableScanNode("id-1", outputType);
-    final List<BoundSplit> splits = List.of(
-        newSampleSplit(scanNode, file)
-    );
-    final AggregationNode aggregationNode = new AggregationNode("id-2", AggregateStep.SINGLE,
-        List.of(FieldAccessTypedExpr.create(new BigIntType(), "n_regionkey")),
-        List.of(),
-        List.of("cnt"),
-        List.of(new Aggregate(
-            new CallTypedExpr(new BigIntType(), List.of(
-                FieldAccessTypedExpr.create(new BigIntType(), "n_nationkey")),
-                "sum"),
-            List.of(new BigIntType()),
-            null,
-            List.of(),
-            List.of(),
-            false
-        )),
-        false,
-        List.of(scanNode),
-        null,
-        List.of()
-    );
-    final Query query = new Query(aggregationNode, splits, Config.empty(), ConnectorConfig.empty());
-    final UpIterator itr = session.queryOps().execute(query);
-    UpIteratorTests.assertIterator(itr)
+    ;
+    final ConnectorSplit split = newSampleSplit(file);
+    final AggregationNode aggregationNode =
+        newSampleAggregationNodeSumNationKeyByRegionKey("id-2", scanNode);
+    final Query query = new Query(aggregationNode, Config.empty(), ConnectorConfig.empty());
+    final SerialTask task = session.queryOps().execute(query);
+    task.addSplit(scanNode.getId(), split);
+    task.noMoreSplits(scanNode.getId());
+    UpIteratorTests.assertIterator(task)
         .assertNumRowVectors(1)
-        .assertRowVectorToString(0, ResourceTests.readResourceAsString("query-output/tpch-aggregate-1.tsv"))
+        .assertRowVectorToString(
+            0, ResourceTests.readResourceAsString("query-output/tpch-aggregate-1.tsv"))
         .run();
+  }
+
+  @Test
+  public void testAggregateStats() {
+    final File file = NATION_FILE.file();
+    final RowType outputType = NATION_FILE.schema();
+    final TableScanNode scanNode = newSampleTableScanNode("id-1", outputType);
+    ;
+    final ConnectorSplit split = newSampleSplit(file);
+    final AggregationNode aggregationNode =
+        newSampleAggregationNodeSumNationKeyByRegionKey("id-2", scanNode);
+    final Query query = new Query(aggregationNode, Config.empty(), ConnectorConfig.empty());
+    final SerialTask serialTask = session.queryOps().execute(query);
+    serialTask.addSplit(scanNode.getId(), split);
+    serialTask.noMoreSplits(scanNode.getId());
+    UpIteratorTests.collect(serialTask);
+    final SerialTaskStats serialTaskStats = serialTask.collectStats();
+
+    final JsonNode scanStats = serialTaskStats.planStats("id-1");
+    Assert.assertEquals("TableScan", scanStats.get("operatorType").asText());
+    Assert.assertEquals(1, scanStats.get("numDrivers").asInt());
+    Assert.assertEquals(1, scanStats.get("numSplits").asInt());
+    Assert.assertEquals(25, scanStats.get("inputRows").asInt());
+
+    final JsonNode aggStats = serialTaskStats.planStats("id-2");
+    Assert.assertEquals("Aggregation", aggStats.get("operatorType").asText());
+    Assert.assertEquals(25, aggStats.get("inputRows").asInt());
+    Assert.assertEquals(5, aggStats.get("outputRows").asInt());
   }
 
   @Test
@@ -234,150 +272,313 @@ public class QueryTest {
     final UpIterator sampleIn = session.queryOps().execute(Serde.fromJson(json, Query.class));
     final DownIterator down = DownIterators.fromJavaIterator(UpIterators.asJavaIterator(sampleIn));
     final ExternalStream es = session.externalStreamOps().bind(down);
-    final TableScanNode scanNode = new TableScanNode(
-        "id-1",
-        SampleQueryTests.getSchema(),
-        new ExternalStreamTableHandle("connector-external-stream"),
-        List.of()
-    );
-    final List<BoundSplit> splits = List.of(
-        new BoundSplit(
+    final TableScanNode scanNode =
+        new TableScanNode(
             "id-1",
-            -1,
-            new ExternalStreamConnectorSplit("connector-external-stream", es.id())
-        )
-    );
-    final Query query = new Query(scanNode, splits, Config.empty(), ConnectorConfig.empty());
-    final UpIterator out = session.queryOps().execute(query);
-    SampleQueryTests.assertIterator(out);
+            SampleQueryTests.getSchema(),
+            new ExternalStreamTableHandle("connector-external-stream"),
+            ImmutableList.of());
+    final ConnectorSplit split =
+        new ExternalStreamConnectorSplit("connector-external-stream", es.id());
+    final Query query = new Query(scanNode, Config.empty(), ConnectorConfig.empty());
+    final SerialTask task = session.queryOps().execute(query);
+    task.addSplit(scanNode.getId(), split);
+    task.noMoreSplits(scanNode.getId());
+    SampleQueryTests.assertIterator(task);
   }
 
   @Test
-  public void testExternalStreamFromBlockingQueue() throws InterruptedException {
-    final BlockingQueue<RowVector> queue = new LinkedBlockingQueue<>();
-    final DownIterator down = DownIterators.fromBlockingQueue(queue);
+  public void testExternalStreamFromEmptyJavaIterator() {
+    final DownIterator down = DownIterators.fromJavaIterator(Collections.emptyIterator());
     final ExternalStream es = session.externalStreamOps().bind(down);
-    final TableScanNode scanNode = new TableScanNode(
-        "id-1",
-        SampleQueryTests.getSchema(),
-        new ExternalStreamTableHandle("connector-external-stream"),
-        List.of()
-    );
-    final List<BoundSplit> splits = List.of(
-        new BoundSplit(
-            scanNode.getId(),
-            -1,
-            new ExternalStreamConnectorSplit("connector-external-stream", es.id())
-        )
-    );
-    final Query query = new Query(scanNode, splits, Config.empty(), ConnectorConfig.empty());
-    final UpIterator out = session.queryOps().execute(query);
+    final TableScanNode scanNode =
+        new TableScanNode(
+            "id-1",
+            SampleQueryTests.getSchema(),
+            new ExternalStreamTableHandle("connector-external-stream"),
+            ImmutableList.of());
+    final ConnectorSplit split =
+        new ExternalStreamConnectorSplit("connector-external-stream", es.id());
+    final Query query = new Query(scanNode, Config.empty(), ConnectorConfig.empty());
+    final SerialTask task = session.queryOps().execute(query);
+    task.addSplit(scanNode.getId(), split);
+    task.noMoreSplits(scanNode.getId());
+    UpIteratorTests.assertIterator(task).assertNumRowVectors(0).run();
+  }
+
+  @Test
+  public void testBlockingQueue() {
+    final ExternalStreams.BlockingQueue queue = session.externalStreamOps().newBlockingQueue();
+    final TableScanNode scanNode =
+        new TableScanNode(
+            "id-1",
+            SampleQueryTests.getSchema(),
+            new ExternalStreamTableHandle("connector-external-stream"),
+            ImmutableList.of());
+    final ConnectorSplit split =
+        new ExternalStreamConnectorSplit("connector-external-stream", queue.id());
+    final Query query = new Query(scanNode, Config.empty(), ConnectorConfig.empty());
+    final SerialTask task = session.queryOps().execute(query);
+    task.addSplit(scanNode.getId(), split);
+    task.noMoreSplits(scanNode.getId());
     final RowVector rv = BaseVectorTests.newSampleRowVector(session);
 
     // No input added, the up-iterator is considered blocked.
-    Assert.assertThrows(VeloxException.class, out::get);
-    Assert.assertEquals(UpIterator.State.BLOCKED, out.advance());
-    Assert.assertEquals(UpIterator.State.BLOCKED, out.advance());
+    Assert.assertThrows(VeloxException.class, task::get);
+    Assert.assertEquals(UpIterator.State.BLOCKED, task.advance());
+    Assert.assertEquals(UpIterator.State.BLOCKED, task.advance());
 
     // Add one input.
-    queue.add(rv);
-    out.waitFor();
-    Assert.assertEquals(UpIterator.State.AVAILABLE, out.advance());
-    Assert.assertThrows(VeloxException.class, out::advance);
-    BaseVectorTests.assertEquals(rv, out.get());
-    Assert.assertThrows(VeloxException.class, out::get);
-    Assert.assertEquals(UpIterator.State.BLOCKED, out.advance());
-    Assert.assertEquals(UpIterator.State.BLOCKED, out.advance());
+    queue.put(rv);
+    task.waitFor();
+    Assert.assertEquals(UpIterator.State.AVAILABLE, task.advance());
+    Assert.assertThrows(VeloxException.class, task::advance);
+    BaseVectorTests.assertEquals(rv, task.get());
+    Assert.assertThrows(VeloxException.class, task::get);
+    Assert.assertEquals(UpIterator.State.BLOCKED, task.advance());
+    Assert.assertEquals(UpIterator.State.BLOCKED, task.advance());
 
     // Add multiple inputs at a time.
-    queue.add(rv);
-    queue.add(rv);
-    out.waitFor();
-    Assert.assertThrows(VeloxException.class, out::waitFor);
-    Assert.assertEquals(UpIterator.State.AVAILABLE, out.advance());
-    Assert.assertThrows(VeloxException.class, out::advance);
-    BaseVectorTests.assertEquals(rv, out.get());
-    Assert.assertThrows(VeloxException.class, out::get);
-    Assert.assertEquals(UpIterator.State.AVAILABLE, out.advance());
-    Assert.assertThrows(VeloxException.class, out::advance);
-    BaseVectorTests.assertEquals(rv, out.get());
-    Assert.assertThrows(VeloxException.class, out::get);
-    Assert.assertEquals(UpIterator.State.BLOCKED, out.advance());
-    Assert.assertEquals(UpIterator.State.BLOCKED, out.advance());
-
+    queue.put(rv);
+    queue.put(rv);
+    task.waitFor();
+    Assert.assertThrows(VeloxException.class, task::waitFor);
+    Assert.assertEquals(UpIterator.State.AVAILABLE, task.advance());
+    Assert.assertThrows(VeloxException.class, task::advance);
+    BaseVectorTests.assertEquals(rv, task.get());
+    Assert.assertThrows(VeloxException.class, task::get);
+    Assert.assertEquals(UpIterator.State.AVAILABLE, task.advance());
+    Assert.assertThrows(VeloxException.class, task::advance);
+    BaseVectorTests.assertEquals(rv, task.get());
+    Assert.assertThrows(VeloxException.class, task::get);
+    Assert.assertEquals(UpIterator.State.BLOCKED, task.advance());
+    Assert.assertEquals(UpIterator.State.BLOCKED, task.advance());
   }
 
   @Test
-  public void testExternalStreamFromBlockingQueueTowThreads() throws InterruptedException {
-    final BlockingQueue<RowVector> queue = new LinkedBlockingQueue<>();
-    final DownIterator down = DownIterators.fromBlockingQueue(queue);
-    final ExternalStream es = session.externalStreamOps().bind(down);
-    final TableScanNode scanNode = new TableScanNode(
-        "id-1",
-        SampleQueryTests.getSchema(),
-        new ExternalStreamTableHandle("connector-external-stream"),
-        List.of()
-    );
-    final List<BoundSplit> splits = List.of(
-        new BoundSplit(
-            scanNode.getId(),
-            -1,
-            new ExternalStreamConnectorSplit("connector-external-stream", es.id())
-        )
-    );
-    final Query query = new Query(scanNode, splits, Config.empty(), ConnectorConfig.empty());
-    final UpIterator out = session.queryOps().execute(query);
+  public void testBlockingQueueNoMoreInput() throws InterruptedException {
+    final ExternalStreams.BlockingQueue queue = session.externalStreamOps().newBlockingQueue();
+    final TableScanNode scanNode =
+        new TableScanNode(
+            "id-1",
+            SampleQueryTests.getSchema(),
+            new ExternalStreamTableHandle("connector-external-stream"),
+            ImmutableList.of());
+    final ConnectorSplit split =
+        new ExternalStreamConnectorSplit("connector-external-stream", queue.id());
+    final Query query = new Query(scanNode, Config.empty(), ConnectorConfig.empty());
+    final SerialTask task = session.queryOps().execute(query);
+    task.addSplit(scanNode.getId(), split);
+    task.noMoreSplits(scanNode.getId());
+    final RowVector rv = BaseVectorTests.newSampleRowVector(session);
+
+    // No input added, the up-iterator is considered blocked.
+    Assert.assertThrows(VeloxException.class, task::get);
+    Assert.assertEquals(UpIterator.State.BLOCKED, task.advance());
+    Assert.assertEquals(UpIterator.State.BLOCKED, task.advance());
+
+    // Add one input.
+    queue.put(rv);
+    task.waitFor();
+    Assert.assertEquals(UpIterator.State.AVAILABLE, task.advance());
+    Assert.assertThrows(VeloxException.class, task::advance);
+    BaseVectorTests.assertEquals(rv, task.get());
+    Assert.assertThrows(VeloxException.class, task::get);
+    Assert.assertEquals(UpIterator.State.BLOCKED, task.advance());
+    Assert.assertEquals(UpIterator.State.BLOCKED, task.advance());
+
+    // Add another input, then signal no-more-input.
+    queue.put(rv);
+    queue.noMoreInput();
+    task.waitFor();
+    Assert.assertEquals(UpIterator.State.AVAILABLE, task.advance());
+    Assert.assertThrows(VeloxException.class, task::advance);
+    BaseVectorTests.assertEquals(rv, task.get());
+    Assert.assertEquals(UpIterator.State.FINISHED, task.advance());
+    Assert.assertThrows(VeloxException.class, task::get);
+  }
+
+  @Test
+  public void testBlockingQueueNoMoreInputTwoThreads() throws InterruptedException {
+    final ExternalStreams.BlockingQueue queue = session.externalStreamOps().newBlockingQueue();
+    final TableScanNode scanNode =
+        new TableScanNode(
+            "id-1",
+            SampleQueryTests.getSchema(),
+            new ExternalStreamTableHandle("connector-external-stream"),
+            ImmutableList.of());
+    final ConnectorSplit split =
+        new ExternalStreamConnectorSplit("connector-external-stream", queue.id());
+    final Query query = new Query(scanNode, Config.empty(), ConnectorConfig.empty());
+    final SerialTask task = session.queryOps().execute(query);
+    task.addSplit(scanNode.getId(), split);
+    task.noMoreSplits(scanNode.getId());
+
+    final Thread consumer =
+        TestThreads.newTestThread(
+            () -> {
+              while (true) {
+                final UpIterator.State state = task.advance();
+                if (state == UpIterator.State.BLOCKED) {
+                  task.waitFor();
+                  continue;
+                }
+                Assert.assertEquals(UpIterator.State.FINISHED, state);
+                Assert.assertThrows(VeloxException.class, task::get);
+                break;
+              }
+            });
+    consumer.start();
+
+    Thread.sleep(500L);
+    queue.noMoreInput();
+    consumer.join();
+  }
+
+  @Test
+  public void testBlockingQueueWithInfiniteIteratorOut() throws Exception {
+    final ExternalStreams.BlockingQueue queue = session.externalStreamOps().newBlockingQueue();
+    final TableScanNode scanNode =
+        new TableScanNode(
+            "id-1",
+            SampleQueryTests.getSchema(),
+            new ExternalStreamTableHandle("connector-external-stream"),
+            ImmutableList.of());
+    final ConnectorSplit split =
+        new ExternalStreamConnectorSplit("connector-external-stream", queue.id());
+    final Query query = new Query(scanNode, Config.empty(), ConnectorConfig.empty());
+
+    final InfiniteIterator<RowVector> out;
+    final RowVector rv = BaseVectorTests.newSampleRowVector(session);
+
+    {
+      final SerialTask task = session.queryOps().execute(query);
+      task.addSplit(scanNode.getId(), split);
+      task.noMoreSplits(scanNode.getId());
+      out = UpIterators.asInfiniteIterator(task);
+    }
+
+    // No input added, the iterator is not available.
+    Assert.assertThrows(VeloxException.class, out::get);
+    Assert.assertFalse(out.available());
+    Assert.assertFalse(out.available());
+
+    // Add one input.
+    queue.put(rv);
+    Assert.assertThrows(VeloxException.class, out::get);
+    out.waitFor();
+    out.waitFor();
+    Assert.assertTrue(out.available());
+    BaseVectorTests.assertEquals(rv, out.get());
+    Assert.assertThrows(VeloxException.class, out::get);
+    Assert.assertFalse(out.available());
+    Assert.assertFalse(out.available());
+
+    // Add multiple inputs at a time.
+    queue.put(rv);
+    queue.put(rv);
+    Assert.assertThrows(VeloxException.class, out::get);
+    out.waitFor();
+    Assert.assertTrue(out.available());
+    Assert.assertTrue(out.available());
+    out.waitFor();
+    BaseVectorTests.assertEquals(rv, out.get());
+    Assert.assertThrows(VeloxException.class, out::get);
+    out.waitFor();
+    Assert.assertTrue(out.available());
+    Assert.assertTrue(out.available());
+    out.waitFor();
+    BaseVectorTests.assertEquals(rv, out.get());
+    Assert.assertThrows(VeloxException.class, out::get);
+    Assert.assertFalse(out.available());
+    Assert.assertFalse(out.available());
+
+    // Async wait.
+    final Thread asyncWaiter =
+        TestThreads.newTestThread(
+            new Runnable() {
+              @Override
+              public void run() {
+                out.waitFor();
+                Assert.assertTrue(out.available());
+                BaseVectorTests.assertEquals(rv, out.get());
+                Assert.assertFalse(out.available());
+              }
+            });
+    asyncWaiter.start();
+    Thread.sleep(500L);
+    queue.put(rv);
+    asyncWaiter.join();
+  }
+
+  @Test
+  public void testBlockingQueueTwoThreads() throws InterruptedException {
+    final ExternalStreams.BlockingQueue queue = session.externalStreamOps().newBlockingQueue();
+    final TableScanNode scanNode =
+        new TableScanNode(
+            "id-1",
+            SampleQueryTests.getSchema(),
+            new ExternalStreamTableHandle("connector-external-stream"),
+            ImmutableList.of());
+    final ConnectorSplit split =
+        new ExternalStreamConnectorSplit("connector-external-stream", queue.id());
+    final Query query = new Query(scanNode, Config.empty(), ConnectorConfig.empty());
+    final SerialTask task = session.queryOps().execute(query);
+    task.addSplit(scanNode.getId(), split);
+    task.noMoreSplits(scanNode.getId());
     final RowVector rv = BaseVectorTests.newSampleRowVector(session);
 
     final Object control = new Object();
 
     // No input added, the up-iterator is considered blocked.
-    Assert.assertThrows(VeloxException.class, out::get);
-    Assert.assertEquals(UpIterator.State.BLOCKED, out.advance());
-    Assert.assertEquals(UpIterator.State.BLOCKED, out.advance());
+    Assert.assertThrows(VeloxException.class, task::get);
+    Assert.assertEquals(UpIterator.State.BLOCKED, task.advance());
+    Assert.assertEquals(UpIterator.State.BLOCKED, task.advance());
 
-    final Thread testThread = new Thread(() -> {
-      try {
-        synchronized (control) {
-          // Signals the main thread to add one input after 500ms.
-          control.notifyAll();
-          control.wait();
+    final Thread testThread =
+        TestThreads.newTestThread(
+            () -> {
+              try {
+                synchronized (control) {
+                  // Signals the main thread to add one input after 500ms.
+                  control.notifyAll();
+                  control.wait();
 
-          // The wait calls should not throw.
-          out.waitFor();
-          Assert.assertThrows(VeloxException.class, out::waitFor);
-          Assert.assertEquals(UpIterator.State.AVAILABLE, out.advance());
-          Assert.assertThrows(VeloxException.class, out::advance);
-          BaseVectorTests.assertEquals(rv, out.get());
-          Assert.assertThrows(VeloxException.class, out::get);
-          Assert.assertEquals(UpIterator.State.BLOCKED, out.advance());
-          Assert.assertEquals(UpIterator.State.BLOCKED, out.advance());
+                  // The wait calls should not throw.
+                  task.waitFor();
+                  Assert.assertThrows(VeloxException.class, task::waitFor);
+                  Assert.assertEquals(UpIterator.State.AVAILABLE, task.advance());
+                  Assert.assertThrows(VeloxException.class, task::advance);
+                  BaseVectorTests.assertEquals(rv, task.get());
+                  Assert.assertThrows(VeloxException.class, task::get);
+                  Assert.assertEquals(UpIterator.State.BLOCKED, task.advance());
+                  Assert.assertEquals(UpIterator.State.BLOCKED, task.advance());
 
-          // Signals the main thread to add two inputs after 500ms.
-          control.notifyAll();
-          control.wait();
+                  // Signals the main thread to add two inputs after 500ms.
+                  control.notifyAll();
+                  control.wait();
 
-          // The wait calls should not throw.
-          out.waitFor();
-          Assert.assertThrows(VeloxException.class, out::waitFor);
-          Assert.assertEquals(UpIterator.State.AVAILABLE, out.advance());
-          Assert.assertThrows(VeloxException.class, out::advance);
-          BaseVectorTests.assertEquals(rv, out.get());
-          Assert.assertThrows(VeloxException.class, out::get);
-          Assert.assertEquals(UpIterator.State.AVAILABLE, out.advance());
-          Assert.assertThrows(VeloxException.class, out::advance);
-          BaseVectorTests.assertEquals(rv, out.get());
-          Assert.assertThrows(VeloxException.class, out::get);
-          Assert.assertEquals(UpIterator.State.BLOCKED, out.advance());
-          Assert.assertEquals(UpIterator.State.BLOCKED, out.advance());
+                  // The wait calls should not throw.
+                  task.waitFor();
+                  Assert.assertThrows(VeloxException.class, task::waitFor);
+                  Assert.assertEquals(UpIterator.State.AVAILABLE, task.advance());
+                  Assert.assertThrows(VeloxException.class, task::advance);
+                  BaseVectorTests.assertEquals(rv, task.get());
+                  Assert.assertThrows(VeloxException.class, task::get);
+                  Assert.assertEquals(UpIterator.State.AVAILABLE, task.advance());
+                  Assert.assertThrows(VeloxException.class, task::advance);
+                  BaseVectorTests.assertEquals(rv, task.get());
+                  Assert.assertThrows(VeloxException.class, task::get);
+                  Assert.assertEquals(UpIterator.State.BLOCKED, task.advance());
+                  Assert.assertEquals(UpIterator.State.BLOCKED, task.advance());
 
-          // Signals the main thread that the test has passed.
-          control.notifyAll();
-        }
-      } catch (InterruptedException e) {
-        throw new RuntimeException(e);
-      }
-    });
+                  // Signals the main thread that the test has passed.
+                  control.notifyAll();
+                }
+              } catch (InterruptedException e) {
+                throw new RuntimeException(e);
+              }
+            });
 
     synchronized (control) {
       // This makes sure test thread starts processing after control.wait().
@@ -385,30 +586,33 @@ public class QueryTest {
       control.wait();
 
       // Add one input after 1s.
-      new Thread(() -> {
-        try {
-          Thread.sleep(500L);
-        } catch (InterruptedException e) {
-          throw new RuntimeException(e);
-        }
-        queue.add(rv);
-      }).start();
-
+      TestThreads.newTestThread(
+              () -> {
+                try {
+                  Thread.sleep(500L);
+                  queue.put(rv);
+                } catch (InterruptedException e) {
+                  throw new RuntimeException(e);
+                }
+              })
+          .start();
 
       // Signals the test thread to start checking the output.
       control.notifyAll();
       control.wait();
 
       // Add two inputs at a time after 1s.
-      new Thread(() -> {
-        try {
-          Thread.sleep(500L);
-        } catch (InterruptedException e) {
-          throw new RuntimeException(e);
-        }
-        queue.add(rv);
-        queue.add(rv);
-      }).start();
+      TestThreads.newTestThread(
+              () -> {
+                try {
+                  Thread.sleep(500L);
+                  queue.put(rv);
+                  queue.put(rv);
+                } catch (InterruptedException e) {
+                  throw new RuntimeException(e);
+                }
+              })
+          .start();
 
       // Signals the test thread to start checking the output.
       control.notifyAll();
@@ -419,162 +623,176 @@ public class QueryTest {
   }
 
   @Test
-  public void testExternalStreamFromBlockingQueueWithInputFiltered() throws InterruptedException {
-    final BlockingQueue<RowVector> queue = new LinkedBlockingQueue<>();
-    final DownIterator down = DownIterators.fromBlockingQueue(queue);
-    final ExternalStream es = session.externalStreamOps().bind(down);
-    final TableScanNode scanNode = new TableScanNode(
-        "id-1",
-        SampleQueryTests.getSchema(),
-        new ExternalStreamTableHandle("connector-external-stream"),
-        List.of()
-    );
-    final FilterNode filterNode = new FilterNode(
-        "id-2",
-        List.of(scanNode),
-        ConstantTypedExpr.create(new BooleanValue(false))
-    );
-    final List<BoundSplit> splits = List.of(
-        new BoundSplit(
-            scanNode.getId(),
-            -1,
-            new ExternalStreamConnectorSplit("connector-external-stream", es.id())
-        )
-    );
-    final Query query = new Query(filterNode, splits, Config.empty(), ConnectorConfig.empty());
-    final UpIterator out = session.queryOps().execute(query);
+  public void testBlockingQueueWithInputFiltered() throws InterruptedException {
+    final ExternalStreams.BlockingQueue queue = session.externalStreamOps().newBlockingQueue();
+    final TableScanNode scanNode =
+        new TableScanNode(
+            "id-1",
+            SampleQueryTests.getSchema(),
+            new ExternalStreamTableHandle("connector-external-stream"),
+            ImmutableList.of());
+    final FilterNode filterNode =
+        new FilterNode(
+            "id-2",
+            ImmutableList.of(scanNode),
+            ConstantTypedExpr.create(new BooleanType(), new BooleanValue(false)));
+    final ConnectorSplit split =
+        new ExternalStreamConnectorSplit("connector-external-stream", queue.id());
+    final Query query = new Query(filterNode, Config.empty(), ConnectorConfig.empty());
+    final SerialTask task = session.queryOps().execute(query);
+    task.addSplit(scanNode.getId(), split);
+    task.noMoreSplits(scanNode.getId());
     final RowVector rv = BaseVectorTests.newSampleRowVector(session);
 
     // No input added, the up-iterator is considered blocked.
-    Assert.assertThrows(VeloxException.class, out::get);
-    Assert.assertEquals(UpIterator.State.BLOCKED, out.advance());
-    Assert.assertEquals(UpIterator.State.BLOCKED, out.advance());
+    Assert.assertThrows(VeloxException.class, task::get);
+    Assert.assertEquals(UpIterator.State.BLOCKED, task.advance());
+    Assert.assertEquals(UpIterator.State.BLOCKED, task.advance());
 
     // Add one input.
-    queue.add(rv);
+    queue.put(rv);
     Thread.sleep(500L);
-    Assert.assertEquals(UpIterator.State.BLOCKED, out.advance());
-    Assert.assertEquals(UpIterator.State.BLOCKED, out.advance());
+    Assert.assertEquals(UpIterator.State.BLOCKED, task.advance());
+    Assert.assertEquals(UpIterator.State.BLOCKED, task.advance());
 
     // Add multiple inputs at a time.
-    queue.add(rv);
-    queue.add(rv);
+    queue.put(rv);
+    queue.put(rv);
     Thread.sleep(500L);
-    Assert.assertEquals(UpIterator.State.BLOCKED, out.advance());
-    Assert.assertEquals(UpIterator.State.BLOCKED, out.advance());
-
+    Assert.assertEquals(UpIterator.State.BLOCKED, task.advance());
+    Assert.assertEquals(UpIterator.State.BLOCKED, task.advance());
   }
 
   @Test
   public void testProject() {
-    final File file = TpchTests.Table.NATION.file();
-    final RowType outputType = TpchTests.Table.NATION.schema();
+    final File file = NATION_FILE.file();
+    final RowType outputType = NATION_FILE.schema();
     final TableScanNode scanNode = newSampleTableScanNode("id-1", outputType);
-    final List<BoundSplit> splits = List.of(
-        newSampleSplit(scanNode, file)
-    );
-    final ProjectNode projectNode = new ProjectNode("id-2", List.of(scanNode),
-        List.of("n_nationkey", "n_comment"),
-        List.of(
-            FieldAccessTypedExpr.create(new BigIntType(), "n_nationkey"),
-            FieldAccessTypedExpr.create(new VarCharType(), "n_comment")
-        ));
-    final Query query = new Query(projectNode, splits, Config.empty(), ConnectorConfig.empty());
-    final UpIterator itr = session.queryOps().execute(query);
-    UpIteratorTests.assertIterator(itr)
+    final ConnectorSplit split = newSampleSplit(file);
+    final ProjectNode projectNode =
+        new ProjectNode(
+            "id-2",
+            ImmutableList.of(scanNode),
+            ImmutableList.of("n_nationkey", "n_comment"),
+            ImmutableList.of(
+                FieldAccessTypedExpr.create(new BigIntType(), "n_nationkey"),
+                FieldAccessTypedExpr.create(new VarCharType(), "n_comment")));
+    final Query query = new Query(projectNode, Config.empty(), ConnectorConfig.empty());
+    final SerialTask task = session.queryOps().execute(query);
+    task.addSplit(scanNode.getId(), split);
+    task.noMoreSplits(scanNode.getId());
+    UpIteratorTests.assertIterator(task)
         .assertNumRowVectors(1)
-        .assertRowVectorToString(0, ResourceTests.readResourceAsString("query-output/tpch-project-1.tsv"))
+        .assertRowVectorToString(
+            0, ResourceTests.readResourceAsString("query-output/tpch-project-1.tsv"))
         .run();
   }
 
   @Test
   public void testFilter() {
-    final File file = TpchTests.Table.NATION.file();
-    final RowType outputType = TpchTests.Table.NATION.schema();
+    final File file = NATION_FILE.file();
+    final RowType outputType = NATION_FILE.schema();
     final TableScanNode scanNode = newSampleTableScanNode("id-1", outputType);
-    final List<BoundSplit> splits = List.of(
-        newSampleSplit(scanNode, file)
-    );
-    final FilterNode filterNode = new FilterNode("id-2", List.of(scanNode),
-        new CallTypedExpr(new BooleanType(), List.of(
-            FieldAccessTypedExpr.create(new BigIntType(), "n_regionkey"),
-            ConstantTypedExpr.create(new BigIntValue(3))),
-            "greaterthanorequal"));
-    final Query query = new Query(filterNode, splits, Config.empty(), ConnectorConfig.empty());
-    final UpIterator itr = session.queryOps().execute(query);
-    UpIteratorTests.assertIterator(itr)
+    final ConnectorSplit split = newSampleSplit(file);
+    final FilterNode filterNode =
+        new FilterNode(
+            "id-2",
+            ImmutableList.of(scanNode),
+            new CallTypedExpr(
+                new BooleanType(),
+                ImmutableList.of(
+                    FieldAccessTypedExpr.create(new BigIntType(), "n_regionkey"),
+                    ConstantTypedExpr.create(new BigIntType(), new BigIntValue(3L))),
+                "greaterthanorequal"));
+    final Query query = new Query(filterNode, Config.empty(), ConnectorConfig.empty());
+    final SerialTask task = session.queryOps().execute(query);
+    task.addSplit(scanNode.getId(), split);
+    task.noMoreSplits(scanNode.getId());
+    UpIteratorTests.assertIterator(task)
         .assertNumRowVectors(1)
-        .assertRowVectorToString(0, ResourceTests.readResourceAsString("query-output/tpch-filter-1.tsv"))
+        .assertRowVectorToString(
+            0, ResourceTests.readResourceAsString("query-output/tpch-filter-1.tsv"))
         .run();
   }
 
   @Test
   public void testHashJoin() {
-    final File nationFile = TpchTests.Table.NATION.file();
-    final RowType nationOutputType = TpchTests.Table.NATION.schema();
-    final File regionFile = TpchTests.Table.REGION.file();
-    final RowType regionOutputType = TpchTests.Table.REGION.schema();
+    final File nationFile = NATION_FILE.file();
+    final RowType nationOutputType = NATION_FILE.schema();
+    final File regionFile = REGION_FILE.file();
+    final RowType regionOutputType = REGION_FILE.schema();
     final TableScanNode nationScanNode = newSampleTableScanNode("id-1", nationOutputType);
     final TableScanNode regionScanNode = newSampleTableScanNode("id-2", regionOutputType);
-    final List<BoundSplit> splits = List.of(
-        newSampleSplit(nationScanNode, nationFile),
-        newSampleSplit(regionScanNode, regionFile)
-    );
-    final HashJoinNode hashJoinNode = new HashJoinNode("id-3",
-        JoinType.LEFT,
-        List.of(FieldAccessTypedExpr.create(new BigIntType(), "n_regionkey")),
-        List.of(FieldAccessTypedExpr.create(new BigIntType(), "r_regionkey")),
-        null,
-        nationScanNode,
-        regionScanNode,
-        new RowType(List.of("n_nationkey", "n_name", "r_regionkey", "r_name"),
-            List.of(new BigIntType(), new VarCharType(), new BigIntType(), new VarCharType())),
-        false
-    );
-    final Query query = new Query(hashJoinNode, splits, Config.empty(), ConnectorConfig.empty());
-    final UpIterator itr = session.queryOps().execute(query);
-    UpIteratorTests.assertIterator(itr)
+    final ConnectorSplit nationSplit = newSampleSplit(nationFile);
+    final ConnectorSplit regionSplit = newSampleSplit(regionFile);
+    final HashJoinNode hashJoinNode =
+        new HashJoinNode(
+            "id-3",
+            JoinType.LEFT,
+            ImmutableList.of(FieldAccessTypedExpr.create(new BigIntType(), "n_regionkey")),
+            ImmutableList.of(FieldAccessTypedExpr.create(new BigIntType(), "r_regionkey")),
+            null,
+            nationScanNode,
+            regionScanNode,
+            new RowType(
+                ImmutableList.of("n_nationkey", "n_name", "r_regionkey", "r_name"),
+                ImmutableList.of(
+                    new BigIntType(), new VarCharType(), new BigIntType(), new VarCharType())),
+            false);
+    final Query query = new Query(hashJoinNode, Config.empty(), ConnectorConfig.empty());
+    final SerialTask task = session.queryOps().execute(query);
+    task.addSplit(nationScanNode.getId(), nationSplit);
+    task.addSplit(regionScanNode.getId(), regionSplit);
+    task.noMoreSplits(nationScanNode.getId());
+    task.noMoreSplits(regionScanNode.getId());
+    UpIteratorTests.assertIterator(task)
         .assertNumRowVectors(1)
-        .assertRowVectorToString(0, ResourceTests.readResourceAsString("query-output/tpch-join-1.tsv"))
+        .assertRowVectorToString(
+            0, ResourceTests.readResourceAsString("query-output/tpch-join-1.tsv"))
         .run();
   }
 
   @Test
   public void testOrderBy() {
-    final File file = TpchTests.Table.NATION.file();
-    final RowType outputType = TpchTests.Table.NATION.schema();
+    final File file = NATION_FILE.file();
+    final RowType outputType = NATION_FILE.schema();
     final TableScanNode scanNode = newSampleTableScanNode("id-1", outputType);
-    final List<BoundSplit> splits = List.of(
-        newSampleSplit(scanNode, file)
-    );
-    final OrderByNode orderByNode = new OrderByNode("id-2", List.of(scanNode),
-        List.of(FieldAccessTypedExpr.create(new BigIntType(), "n_regionkey"),
-            FieldAccessTypedExpr.create(new BigIntType(), "n_nationkey")),
-        List.of(new SortOrder(true, false),
-            new SortOrder(false, false)),
-        false);
-    final Query query = new Query(orderByNode, splits, Config.empty(), ConnectorConfig.empty());
-    final UpIterator itr = session.queryOps().execute(query);
-    UpIteratorTests.assertIterator(itr)
+    final ConnectorSplit split = newSampleSplit(file);
+    final OrderByNode orderByNode =
+        new OrderByNode(
+            "id-2",
+            ImmutableList.of(scanNode),
+            ImmutableList.of(
+                FieldAccessTypedExpr.create(new BigIntType(), "n_regionkey"),
+                FieldAccessTypedExpr.create(new BigIntType(), "n_nationkey")),
+            ImmutableList.of(new SortOrder(true, false), new SortOrder(false, false)),
+            false);
+    final Query query = new Query(orderByNode, Config.empty(), ConnectorConfig.empty());
+    final SerialTask task = session.queryOps().execute(query);
+    task.addSplit(scanNode.getId(), split);
+    task.noMoreSplits(scanNode.getId());
+    UpIteratorTests.assertIterator(task)
         .assertNumRowVectors(1)
-        .assertRowVectorToString(0, ResourceTests.readResourceAsString("query-output/tpch-orderby-1.tsv"))
+        .assertRowVectorToString(
+            0, ResourceTests.readResourceAsString("query-output/tpch-orderby-1.tsv"))
         .run();
   }
 
   @Test
   public void testLimit() {
-    final File file = TpchTests.Table.NATION.file();
-    final RowType outputType = TpchTests.Table.NATION.schema();
+    final File file = NATION_FILE.file();
+    final RowType outputType = NATION_FILE.schema();
     final TableScanNode scanNode = newSampleTableScanNode("id-1", outputType);
-    final List<BoundSplit> splits = List.of(
-        newSampleSplit(scanNode, file)
-    );
-    final LimitNode limitNode = new LimitNode("id-2", List.of(scanNode), 5, 3, false);
-    final Query query = new Query(limitNode, splits, Config.empty(), ConnectorConfig.empty());
-    final UpIterator itr = session.queryOps().execute(query);
-    UpIteratorTests.assertIterator(itr)
+    final ConnectorSplit split = newSampleSplit(file);
+    final LimitNode limitNode = new LimitNode("id-2", ImmutableList.of(scanNode), 5, 3, false);
+    final Query query = new Query(limitNode, Config.empty(), ConnectorConfig.empty());
+    final SerialTask task = session.queryOps().execute(query);
+    task.addSplit(scanNode.getId(), split);
+    task.noMoreSplits(scanNode.getId());
+    UpIteratorTests.assertIterator(task)
         .assertNumRowVectors(1)
-        .assertRowVectorToString(0, ResourceTests.readResourceAsString("query-output/tpch-limit-1.tsv"))
+        .assertRowVectorToString(
+            0, ResourceTests.readResourceAsString("query-output/tpch-limit-1.tsv"))
         .run();
   }
 
@@ -582,18 +800,20 @@ public class QueryTest {
   public void testTableWrite() throws IOException {
     final File folder = JniWorkspace.getDefault().getSubDir("test");
     final String fileName = String.format("test-write-%s.tmp", UUID.randomUUID());
-    final File file = TpchTests.Table.NATION.file();
-    final RowType schema = TpchTests.Table.NATION.schema();
+    final File file = NATION_FILE.file();
+    final RowType schema = NATION_FILE.schema();
     final TableScanNode scanNode = newSampleTableScanNode("id-1", schema);
-    final List<BoundSplit> splits = List.of(
-        newSampleSplit(scanNode, file)
-    );
-    final TableWriteNode tableWriteNode = newSampleTableWriteNode("id-2", schema, folder, fileName, scanNode);
-    final Query query = new Query(tableWriteNode, splits, Config.empty(), ConnectorConfig.empty());
-    final UpIterator itr = session.queryOps().execute(query);
-    UpIteratorTests.assertIterator(itr)
+    final ConnectorSplit split = newSampleSplit(file);
+    final TableWriteNode tableWriteNode =
+        newSampleTableWriteNode("id-2", schema, folder, fileName, scanNode);
+    final Query query = new Query(tableWriteNode, Config.empty(), ConnectorConfig.empty());
+    final SerialTask task = session.queryOps().execute(query);
+    task.addSplit(scanNode.getId(), split);
+    task.noMoreSplits(scanNode.getId());
+    UpIteratorTests.assertIterator(task)
         .assertNumRowVectors(1)
-        .assertRowVectorTypeJson(0, ResourceTests.readResourceAsString("query-output-type/tpch-table-write-1.json"))
+        .assertRowVectorTypeJson(
+            0, ResourceTests.readResourceAsString("query-output-type/tpch-table-write-1.json"))
         .run();
   }
 
@@ -601,66 +821,108 @@ public class QueryTest {
   public void testTableWriteRoundTrip() throws IOException {
     final File folder = JniWorkspace.getDefault().getSubDir("test");
     final String fileName = String.format("test-write-%s.tmp", UUID.randomUUID());
-    final RowType schema = TpchTests.Table.NATION.schema();
+    final RowType schema = NATION_FILE.schema();
 
     // Read the sample nation file.
-    final File file = TpchTests.Table.NATION.file();
+    final File file = NATION_FILE.file();
     final TableScanNode scanNode1 = newSampleTableScanNode("id-1", schema);
-    final List<BoundSplit> splits1 = List.of(
-        newSampleSplit(scanNode1, file)
-    );
-    final TableWriteNode tableWriteNode = newSampleTableWriteNode("id-2", schema, folder, fileName, scanNode1);
-    final Query query1 = new Query(tableWriteNode, splits1, Config.empty(), ConnectorConfig.empty());
-    final UpIterator itr1 = session.queryOps().execute(query1);
-    UpIteratorTests.assertIterator(itr1)
+    final ConnectorSplit split1 = newSampleSplit(file);
+    final TableWriteNode tableWriteNode =
+        newSampleTableWriteNode("id-2", schema, folder, fileName, scanNode1);
+    final Query query1 = new Query(tableWriteNode, Config.empty(), ConnectorConfig.empty());
+    final SerialTask task1 = session.queryOps().execute(query1);
+    task1.addSplit(scanNode1.getId(), split1);
+    task1.noMoreSplits(scanNode1.getId());
+    UpIteratorTests.assertIterator(task1)
         .assertNumRowVectors(1)
-        .assertRowVectorTypeJson(0, ResourceTests.readResourceAsString("query-output-type/tpch-table-write-1.json"))
+        .assertRowVectorTypeJson(
+            0, ResourceTests.readResourceAsString("query-output-type/tpch-table-write-1.json"))
         .run();
 
     // Read the file we just wrote.
     final File writtenFile = folder.toPath().resolve(fileName).toFile();
     ;
     final TableScanNode scanNode2 = newSampleTableScanNode("id-1", schema);
-    final List<BoundSplit> splits2 = List.of(
-        newSampleSplit(scanNode2, writtenFile)
-    );
-    final Query query2 = new Query(scanNode2, splits2, Config.empty(), ConnectorConfig.empty());
-    final UpIterator itr2 = session.queryOps().execute(query2);
-    UpIteratorTests.assertIterator(itr2)
+    final ConnectorSplit splits2 = newSampleSplit(writtenFile);
+    final Query query2 = new Query(scanNode2, Config.empty(), ConnectorConfig.empty());
+    final SerialTask task2 = session.queryOps().execute(query2);
+    task2.addSplit(scanNode2.getId(), splits2);
+    task2.noMoreSplits(scanNode2.getId());
+    UpIteratorTests.assertIterator(task2)
         .assertNumRowVectors(1)
-        .assertRowVectorToString(0, ResourceTests.readResourceAsString("query-output/tpch-table-scan-nation.tsv"))
+        .assertRowVectorToString(
+            0, ResourceTests.readResourceAsString("query-output/tpch-table-scan-nation.tsv"))
         .run();
-
   }
 
-  private static TableWriteNode newSampleTableWriteNode(String id, RowType schema, File folder, String fileName, TableScanNode scanNode) {
-    final ConnectorInsertTableHandle handle = new HiveInsertTableHandle(
-        toColumnHandles(schema),
-        new LocationHandle(
-            folder.getAbsolutePath(),
-            folder.getAbsolutePath(),
-            LocationHandle.TableType.NEW,
-            fileName
-        ),
-        FileFormat.PARQUET,
-        null,
-        CompressionKind.GZIP,
-        Map.of(),
-        true
-    );
+  @Test
+  public void testWindow() {
+
+    final File file = NATION_FILE.file();
+    final RowType outputType = NATION_FILE.schema();
+    final TableScanNode scanNode = newSampleTableScanNode("id-1", outputType);
+    final ConnectorSplit split = newSampleSplit(file);
+
+    final WindowNode windowNode =
+        new WindowNode(
+            "id-2",
+            ImmutableList.of(FieldAccessTypedExpr.create(new BigIntType(), "n_regionkey")),
+            ImmutableList.of(FieldAccessTypedExpr.create(new BigIntType(), "n_nationkey")),
+            ImmutableList.of(new SortOrder(false, true)),
+            ImmutableList.of("row_num"),
+            ImmutableList.of(
+                new WindowFunction(
+                    new CallTypedExpr(new IntegerType(), ImmutableList.of(), "row_number"),
+                    new WindowFrame(
+                        WindowType.RANGE,
+                        BoundType.UNBOUNDED_PRECEDING,
+                        null,
+                        BoundType.CURRENT_ROW,
+                        null),
+                    false)),
+            false,
+            ImmutableList.of(scanNode));
+
+    final Query query = new Query(windowNode, Config.empty(), ConnectorConfig.empty());
+    final SerialTask task = session.queryOps().execute(query);
+    task.addSplit(scanNode.getId(), split);
+    task.noMoreSplits(scanNode.getId());
+    UpIteratorTests.assertIterator(task)
+        .assertNumRowVectors(1)
+        .assertRowVectorToString(
+            0, ResourceTests.readResourceAsString("query-output/tpch-window-1.tsv"))
+        .run();
+  }
+
+  private static TableWriteNode newSampleTableWriteNode(
+      String id, RowType schema, File folder, String fileName, TableScanNode scanNode) {
+    final ConnectorInsertTableHandle handle =
+        new HiveInsertTableHandle(
+            toColumnHandles(schema),
+            new LocationHandle(
+                folder.getAbsolutePath(),
+                folder.getAbsolutePath(),
+                LocationHandle.TableType.NEW,
+                fileName),
+            FileFormat.PARQUET,
+            null,
+            CompressionKind.GZIP,
+            ImmutableMap.of(),
+            true,
+            new HiveInsertFileNameGenerator());
     final RowType outputType = TableWriteTraits.outputType();
-    final TableWriteNode tableWriteNode = new TableWriteNode(
-        id,
-        schema,
-        schema.getNames(),
-        null,
-        HIVE_CONNECTOR_ID,
-        handle,
-        false,
-        outputType,
-        CommitStrategy.NO_COMMIT,
-        List.of(scanNode)
-    );
+    final TableWriteNode tableWriteNode =
+        new TableWriteNode(
+            id,
+            schema,
+            schema.getNames(),
+            null,
+            HIVE_CONNECTOR_ID,
+            handle,
+            false,
+            outputType,
+            CommitStrategy.NO_COMMIT,
+            ImmutableList.of(scanNode));
     return tableWriteNode;
   }
 
@@ -669,8 +931,10 @@ public class QueryTest {
     for (int i = 0; i < rowType.size(); i++) {
       final String name = rowType.getNames().get(i);
       final Type type = rowType.getChildren().get(i);
-      list.add(new Assignment(name,
-          new HiveColumnHandle(name, ColumnType.REGULAR, type, type, List.of())));
+      list.add(
+          new Assignment(
+              name,
+              new HiveColumnHandle(name, ColumnType.REGULAR, type, type, ImmutableList.of())));
     }
     return list;
   }
@@ -680,52 +944,73 @@ public class QueryTest {
     for (int i = 0; i < rowType.size(); i++) {
       final String name = rowType.getNames().get(i);
       final Type type = rowType.getChildren().get(i);
-      list.add(new HiveColumnHandle(name, ColumnType.REGULAR, type, type, List.of()));
+      list.add(new HiveColumnHandle(name, ColumnType.REGULAR, type, type, ImmutableList.of()));
     }
     return list;
   }
 
-  private static BoundSplit newSampleSplit(TableScanNode scanNode, File file) {
-    return new BoundSplit(
-        scanNode.getId(),
-        -1,
-        new HiveConnectorSplit(
-            "connector-hive",
-            0,
-            false,
-            file.getAbsolutePath(),
-            FileFormat.PARQUET,
-            0,
-            file.length(),
-            Map.of(),
-            OptionalInt.empty(),
-            Optional.empty(),
-            Map.of(),
-            Optional.empty(),
-            Map.of(),
-            Map.of(),
-            Map.of(),
-            Optional.empty(),
-            Optional.empty()
-        )
-    );
+  private static ConnectorSplit newSampleSplit(File file) {
+    return new HiveConnectorSplit(
+        "connector-hive",
+        0,
+        false,
+        file.getAbsolutePath(),
+        FileFormat.PARQUET,
+        0,
+        file.length(),
+        ImmutableMap.of(),
+        null,
+        null,
+        ImmutableMap.of(),
+        null,
+        ImmutableMap.of(),
+        ImmutableMap.of(),
+        null,
+        null);
   }
 
   private static TableScanNode newSampleTableScanNode(String planNodeId, RowType outputType) {
-    final TableScanNode scanNode = new TableScanNode(
-        planNodeId,
-        outputType,
-        new HiveTableHandle(
-            "connector-hive",
-            "tab-1",
-            false,
-            List.of(),
-            null,
+    final TableScanNode scanNode =
+        new TableScanNode(
+            planNodeId,
             outputType,
-            Map.of()
-        ),
-        toAssignments(outputType)
-    );
+            new HiveTableHandle(
+                "connector-hive",
+                "tab-1",
+                false,
+                ImmutableList.of(),
+                null,
+                outputType,
+                ImmutableMap.of()),
+            toAssignments(outputType));
     return scanNode;
+  }
+
+  private static AggregationNode newSampleAggregationNodeSumNationKeyByRegionKey(
+      String planNodeId, PlanNode source) {
+    final AggregationNode aggregationNode =
+        new AggregationNode(
+            planNodeId,
+            AggregateStep.SINGLE,
+            ImmutableList.of(FieldAccessTypedExpr.create(new BigIntType(), "n_regionkey")),
+            ImmutableList.of(),
+            ImmutableList.of("cnt"),
+            ImmutableList.of(
+                new Aggregate(
+                    new CallTypedExpr(
+                        new BigIntType(),
+                        ImmutableList.of(
+                            FieldAccessTypedExpr.create(new BigIntType(), "n_nationkey")),
+                        "sum"),
+                    ImmutableList.of(new BigIntType()),
+                    null,
+                    ImmutableList.of(),
+                    ImmutableList.of(),
+                    false)),
+            false,
+            ImmutableList.of(source),
+            null,
+            ImmutableList.of());
+    return aggregationNode;
   }
 }
