@@ -1,38 +1,49 @@
+/*
+* Licensed to the Apache Software Foundation (ASF) under one or more
+* contributor license agreements.  See the NOTICE file distributed with
+* this work for additional information regarding copyright ownership.
+* The ASF licenses this file to You under the Apache License, Version 2.0
+* (the "License"); you may not use this file except in compliance with
+* the License.  You may obtain a copy of the License at
+*
+*    http://www.apache.org/licenses/LICENSE-2.0
+*
+* Unless required by applicable law or agreed to in writing, software
+* distributed under the License is distributed on an "AS IS" BASIS,
+* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+* See the License for the specific language governing permissions and
+* limitations under the License.
+*/
 package io.github.zhztheplayer.velox4j.serde;
 
-import com.fasterxml.jackson.core.JsonProcessingException;
+import java.io.*;
+import java.util.Collections;
+
 import com.fasterxml.jackson.databind.JsonNode;
-import com.fasterxml.jackson.databind.ObjectMapper;
+import com.google.common.base.Preconditions;
+import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableMap;
+import org.junit.Assert;
+import org.junit.ComparisonFailure;
+
+import io.github.zhztheplayer.velox4j.Velox4j;
 import io.github.zhztheplayer.velox4j.aggregate.Aggregate;
 import io.github.zhztheplayer.velox4j.aggregate.AggregateStep;
-import io.github.zhztheplayer.velox4j.connector.ColumnType;
-import io.github.zhztheplayer.velox4j.connector.CompressionKind;
-import io.github.zhztheplayer.velox4j.connector.ConnectorTableHandle;
-import io.github.zhztheplayer.velox4j.connector.FileFormat;
-import io.github.zhztheplayer.velox4j.connector.FileProperties;
-import io.github.zhztheplayer.velox4j.connector.HiveBucketConversion;
-import io.github.zhztheplayer.velox4j.connector.HiveBucketProperty;
-import io.github.zhztheplayer.velox4j.connector.HiveColumnHandle;
-import io.github.zhztheplayer.velox4j.connector.HiveConnectorSplit;
-import io.github.zhztheplayer.velox4j.connector.HiveInsertTableHandle;
-import io.github.zhztheplayer.velox4j.connector.HiveSortingColumn;
-import io.github.zhztheplayer.velox4j.connector.HiveTableHandle;
-import io.github.zhztheplayer.velox4j.connector.LocationHandle;
-import io.github.zhztheplayer.velox4j.connector.RowIdProperties;
-import io.github.zhztheplayer.velox4j.connector.SubfieldFilter;
+import io.github.zhztheplayer.velox4j.connector.*;
 import io.github.zhztheplayer.velox4j.exception.VeloxException;
 import io.github.zhztheplayer.velox4j.expression.CallTypedExpr;
 import io.github.zhztheplayer.velox4j.expression.FieldAccessTypedExpr;
 import io.github.zhztheplayer.velox4j.filter.AlwaysTrue;
 import io.github.zhztheplayer.velox4j.jni.JniApiTests;
 import io.github.zhztheplayer.velox4j.jni.LocalSession;
-import io.github.zhztheplayer.velox4j.plan.AggregationNode;
-import io.github.zhztheplayer.velox4j.serializable.ISerializableCo;
 import io.github.zhztheplayer.velox4j.memory.AllocationListener;
 import io.github.zhztheplayer.velox4j.memory.MemoryManager;
+import io.github.zhztheplayer.velox4j.plan.AggregationNode;
 import io.github.zhztheplayer.velox4j.plan.PlanNode;
 import io.github.zhztheplayer.velox4j.plan.TableScanNode;
+import io.github.zhztheplayer.velox4j.plan.WindowNode;
 import io.github.zhztheplayer.velox4j.serializable.ISerializable;
+import io.github.zhztheplayer.velox4j.serializable.ISerializableCo;
 import io.github.zhztheplayer.velox4j.sort.SortOrder;
 import io.github.zhztheplayer.velox4j.type.ArrayType;
 import io.github.zhztheplayer.velox4j.type.BigIntType;
@@ -44,13 +55,14 @@ import io.github.zhztheplayer.velox4j.type.Type;
 import io.github.zhztheplayer.velox4j.type.VarCharType;
 import io.github.zhztheplayer.velox4j.variant.Variant;
 import io.github.zhztheplayer.velox4j.variant.VariantCo;
-import org.junit.Assert;
-import org.junit.ComparisonFailure;
-
-import java.util.*;
+import io.github.zhztheplayer.velox4j.window.BoundType;
+import io.github.zhztheplayer.velox4j.window.WindowFrame;
+import io.github.zhztheplayer.velox4j.window.WindowFunction;
+import io.github.zhztheplayer.velox4j.window.WindowType;
+import io.github.zhztheplayer.velox4j.write.ColumnStatsSpec;
 
 public final class SerdeTests {
-private static void assertJsonEquals(String expected, String actual) {
+  private static void assertJsonEquals(String expected, String actual) {
     final JsonNode expectedTree = Serde.parseTree(expected);
     final JsonNode actualTree = Serde.parseTree(actual);
     if (!actualTree.equals(expectedTree)) {
@@ -58,10 +70,18 @@ private static void assertJsonEquals(String expected, String actual) {
     }
   }
 
-  public static <T extends ISerializable> ObjectAndJson<ISerializable> testISerializableRoundTrip(T inObj) {
-    try (final MemoryManager memoryManager = MemoryManager.create(AllocationListener.NOOP);
+  public static <T extends ISerializable> ObjectAndJson<ISerializable> testISerializableRoundTrip(
+      T inObj) {
+    try (final MemoryManager memoryManager = Velox4j.newMemoryManager(AllocationListener.NOOP);
         final LocalSession session = JniApiTests.createLocalSession(memoryManager)) {
       final String inJson = Serde.toPrettyJson(inObj);
+
+      {
+        final byte[] serialized = serialize(inObj);
+        final ISerializable javaDeserialized = deserialize(serialized);
+        final String javaDeserializedJson = Serde.toPrettyJson(javaDeserialized);
+        assertJsonEquals(inJson, javaDeserializedJson);
+      }
 
       {
         final ISerializable javaOutObj = Serde.fromJson(inJson, ISerializable.class);
@@ -78,16 +98,17 @@ private static void assertJsonEquals(String expected, String actual) {
     }
   }
 
-  public static <T extends ISerializable> ObjectAndJson<ISerializable> testISerializableRoundTrip(String inJson,
-      Class<? extends T> valueType) {
-    final T inObj = Serde.fromJson(inJson, valueType);
-    return SerdeTests.testISerializableRoundTrip(inObj);
-  }
-
   public static <T extends Variant> ObjectAndJson<Variant> testVariantRoundTrip(T inObj) {
-    try (final MemoryManager memoryManager = MemoryManager.create(AllocationListener.NOOP);
+    try (final MemoryManager memoryManager = Velox4j.newMemoryManager(AllocationListener.NOOP);
         final LocalSession session = JniApiTests.createLocalSession(memoryManager)) {
       final String inJson = Serde.toPrettyJson(inObj);
+
+      {
+        final byte[] serialized = serialize(inObj);
+        final Variant javaDeserialized = deserialize(serialized);
+        final String javaDeserializedJson = Serde.toPrettyJson(javaDeserialized);
+        assertJsonEquals(inJson, javaDeserializedJson);
+      }
 
       {
         final Variant javaOutObj = Serde.fromJson(inJson, Variant.class);
@@ -106,33 +127,40 @@ private static void assertJsonEquals(String expected, String actual) {
   }
 
   public static <T> ObjectAndJson<Object> testJavaBeanRoundTrip(T inObj) {
-    try {
-      if (inObj instanceof NativeBean) {
-        throw new VeloxException("Cannot round trip NativeBean");
-      }
-      final Class<?> clazz = inObj.getClass();
-      final ObjectMapper jsonMapper = Serde.jsonMapper();
-      final String inJson = jsonMapper.writeValueAsString(inObj);
-      final Object outObj = jsonMapper.readValue(inJson, clazz);
-      final String outJson = jsonMapper.writeValueAsString(outObj);
-      assertJsonEquals(inJson, outJson);
-      return new ObjectAndJson<>(outObj, outJson);
-    } catch (JsonProcessingException e) {
-      throw new RuntimeException(e);
+    if (inObj instanceof NativeBean) {
+      throw new VeloxException("Cannot round trip NativeBean");
     }
+    final String inJson = Serde.toPrettyJson(inObj);
+
+    {
+      final byte[] serialized = serialize((Serializable) inObj);
+      final Object javaDeserialized = deserialize(serialized);
+      final String javaDeserializedJson = Serde.toPrettyJson(javaDeserialized);
+      assertJsonEquals(inJson, javaDeserializedJson);
+    }
+
+    final Class<?> clazz = inObj.getClass();
+    final Object outObj = Serde.fromJson(inJson, clazz);
+    final String outJson = Serde.toPrettyJson(outObj);
+    assertJsonEquals(inJson, outJson);
+    return new ObjectAndJson<>(outObj, outJson);
   }
 
   public static HiveColumnHandle newSampleHiveColumnHandle() {
-    final Type dataType = ArrayType.create(
-        MapType.create(
-            new VarCharType(),
-            new RowType(List.of("id", "description"),
-                List.of(new BigIntType(),
-                    new VarCharType()))));
-    final HiveColumnHandle handle = new HiveColumnHandle("complex_type",
-        ColumnType.REGULAR, dataType, dataType, List.of(
-        "complex_type[1][\"foo\"].id",
-        "complex_type[2][\"foo\"].id"));
+    final Type dataType =
+        ArrayType.create(
+            MapType.create(
+                new VarCharType(),
+                new RowType(
+                    ImmutableList.of("id", "description"),
+                    ImmutableList.of(new BigIntType(), new VarCharType()))));
+    final HiveColumnHandle handle =
+        new HiveColumnHandle(
+            "complex_type",
+            ColumnType.REGULAR,
+            dataType,
+            dataType,
+            ImmutableList.of("complex_type[1][\"foo\"].id", "complex_type[2][\"foo\"].id"));
     return handle;
   }
 
@@ -145,21 +173,24 @@ private static void assertJsonEquals(String expected, String actual) {
         FileFormat.ORC,
         1,
         100,
-        Map.of("key", Optional.of("value")),
-        OptionalInt.of(1),
-        Optional.of(new HiveBucketConversion(
-            1, 1,
-            List.of(
+        ImmutableMap.of("key", "value"),
+        1,
+        new HiveBucketConversion(
+            1,
+            1,
+            ImmutableList.of(
                 new HiveColumnHandle(
-                    "t", ColumnType.REGULAR,
-                    new IntegerType(), new IntegerType(), Collections.emptyList())))),
-        Map.of("sk", "sv"),
-        Optional.of("extra"),
-        Map.of("serde_key", "serde_value"),
-        Map.of("storage_key", "storage_key"),
-        Map.of("info_key", "info_value"),
-        Optional.of(new FileProperties(OptionalLong.of(100), OptionalLong.of(50))),
-        Optional.of(new RowIdProperties(5, 10, "UUID-100")));
+                    "t",
+                    ColumnType.REGULAR,
+                    new IntegerType(),
+                    new IntegerType(),
+                    Collections.emptyList()))),
+        ImmutableMap.of("sk", "sv"),
+        "extra",
+        ImmutableMap.of("serde_key", "serde_value"),
+        ImmutableMap.of("info_key", "info_value"),
+        new FileProperties(100L, 50L),
+        new RowIdProperties(5, 10, "UUID-100"));
   }
 
   public static HiveConnectorSplit newSampleHiveSplitWithMissingFields() {
@@ -171,106 +202,155 @@ private static void assertJsonEquals(String expected, String actual) {
         FileFormat.ORC,
         1,
         100,
-        Map.of("key", Optional.of("value")),
-        OptionalInt.of(1),
-        Optional.of(new HiveBucketConversion(
-            1, 1,
-            List.of(
+        ImmutableMap.of("key", "value"),
+        1,
+        new HiveBucketConversion(
+            1,
+            1,
+            ImmutableList.of(
                 new HiveColumnHandle(
-                    "t", ColumnType.REGULAR,
-                    new IntegerType(), new IntegerType(), Collections.emptyList())))),
-        Map.of("sk", "sv"),
-        Optional.empty(),
-        Map.of("serde_key", "serde_value"),
-        Map.of("storage_key", "storage_key"),
-        Map.of("info_key", "info_value"),
-        Optional.of(new FileProperties(OptionalLong.empty(), OptionalLong.of(50))),
-        Optional.of(new RowIdProperties(5, 10, "UUID-100")));
+                    "t",
+                    ColumnType.REGULAR,
+                    new IntegerType(),
+                    new IntegerType(),
+                    Collections.emptyList()))),
+        ImmutableMap.of("sk", "sv"),
+        null,
+        ImmutableMap.of("serde_key", "serde_value"),
+        ImmutableMap.of("info_key", "info_value"),
+        new FileProperties(null, 50L),
+        new RowIdProperties(5, 10, "UUID-100"));
   }
 
   public static ConnectorTableHandle newSampleHiveTableHandle(RowType outputType) {
-    final ConnectorTableHandle handle = new HiveTableHandle(
-        "connector-1",
-        "tab-1",
-        true,
-        List.of(new SubfieldFilter("complex_type[1].id", new AlwaysTrue())),
-        new CallTypedExpr(new BooleanType(), Collections.emptyList(), "always_true"),
-        outputType,
-        Map.of("tk", "tv")
-    );
+    final ConnectorTableHandle handle =
+        new HiveTableHandle(
+            "connector-1",
+            "tab-1",
+            true,
+            ImmutableList.of(new SubfieldFilter("complex_type[1].id", new AlwaysTrue())),
+            new CallTypedExpr(new BooleanType(), Collections.emptyList(), "always_true"),
+            outputType,
+            ImmutableMap.of("tk", "tv"));
     return handle;
   }
 
   public static LocationHandle newSampleLocationHandle() {
-    return new LocationHandle("/tmp/target-path",
-        "/tmp/write-path", LocationHandle.TableType.EXISTING, "target-file-name");
+    return new LocationHandle(
+        "/tmp/target-path",
+        "/tmp/write-path",
+        LocationHandle.TableType.EXISTING,
+        "target-file-name");
   }
 
   public static HiveBucketProperty newSampleHiveBucketProperty() {
     return new HiveBucketProperty(
         HiveBucketProperty.Kind.PRESTO_NATIVE,
         10,
-        List.of("foo", "bar"),
-        List.of(new IntegerType(), new VarCharType()),
-        List.of(
+        ImmutableList.of("foo", "bar"),
+        ImmutableList.of(new IntegerType(), new VarCharType()),
+        ImmutableList.of(
             new HiveSortingColumn("foo", new SortOrder(true, true)),
-            new HiveSortingColumn("bar", new SortOrder(false, false))
-        )
-    );
+            new HiveSortingColumn("bar", new SortOrder(false, false))));
   }
 
   public static HiveInsertTableHandle newSampleHiveInsertTableHandle() {
     return new HiveInsertTableHandle(
-        List.of(newSampleHiveColumnHandle()),
+        ImmutableList.of(newSampleHiveColumnHandle()),
         newSampleLocationHandle(),
         FileFormat.PARQUET,
         newSampleHiveBucketProperty(),
         CompressionKind.ZLIB,
-        Map.of("serde_key", "serde_value"),
-        false
-    );
+        ImmutableMap.of("serde_key", "serde_value"),
+        false,
+        new HiveInsertFileNameGenerator());
   }
 
-  public static Aggregate newSampleAggregate() {
-    final Aggregate aggregate = new Aggregate(
-        new CallTypedExpr(new IntegerType(),
-            Collections.singletonList(FieldAccessTypedExpr.create(
-                new IntegerType(), "foo")), "sum"),
-        List.of(new IntegerType()),
-        FieldAccessTypedExpr.create(new IntegerType(), "foo"),
-        List.of(FieldAccessTypedExpr.create(new IntegerType(), "foo")),
-        List.of(new SortOrder(true, true)), true);
-    return aggregate;
+  public static RowType newSampleOutputType() {
+    return new RowType(
+        ImmutableList.of("foo", "bar"), ImmutableList.of(new IntegerType(), new IntegerType()));
   }
 
   public static PlanNode newSampleTableScanNode(String planNodeId, RowType outputType) {
     final ConnectorTableHandle handle = SerdeTests.newSampleHiveTableHandle(outputType);
-    final PlanNode scan = new TableScanNode(planNodeId, outputType,
-        handle, Collections.emptyList());
+    final PlanNode scan =
+        new TableScanNode(planNodeId, outputType, handle, Collections.emptyList());
     return scan;
   }
 
+  public static Aggregate newSampleAggregate() {
+    final Aggregate aggregate =
+        new Aggregate(
+            new CallTypedExpr(
+                new IntegerType(),
+                Collections.singletonList(FieldAccessTypedExpr.create(new IntegerType(), "foo")),
+                "sum"),
+            ImmutableList.of(new IntegerType()),
+            FieldAccessTypedExpr.create(new IntegerType(), "foo"),
+            ImmutableList.of(FieldAccessTypedExpr.create(new IntegerType(), "foo")),
+            ImmutableList.of(new SortOrder(true, true)),
+            true);
+    return aggregate;
+  }
+
   public static AggregationNode newSampleAggregationNode(String aggNodeId, String scanNodeId) {
-    final PlanNode scan = SerdeTests.newSampleTableScanNode(scanNodeId,
-        SerdeTests.newSampleOutputType());
+    final PlanNode scan =
+        SerdeTests.newSampleTableScanNode(scanNodeId, SerdeTests.newSampleOutputType());
     final Aggregate aggregate = SerdeTests.newSampleAggregate();
-    final AggregationNode aggregationNode = new AggregationNode(
-        aggNodeId,
-        AggregateStep.PARTIAL,
-        List.of(FieldAccessTypedExpr.create(new IntegerType(), "foo")),
-        List.of(FieldAccessTypedExpr.create(new IntegerType(), "foo")),
-        List.of("sum"),
-        List.of(aggregate),
-        true,
-        List.of(scan),
-        FieldAccessTypedExpr.create(new IntegerType(), "foo"),
-        List.of(0)
-    );
+    final AggregationNode aggregationNode =
+        new AggregationNode(
+            aggNodeId,
+            AggregateStep.PARTIAL,
+            ImmutableList.of(FieldAccessTypedExpr.create(new IntegerType(), "foo")),
+            ImmutableList.of(FieldAccessTypedExpr.create(new IntegerType(), "foo")),
+            ImmutableList.of("sum"),
+            ImmutableList.of(aggregate),
+            true,
+            ImmutableList.of(scan),
+            FieldAccessTypedExpr.create(new IntegerType(), "foo"),
+            ImmutableList.of(0));
     return aggregationNode;
   }
 
-  public static RowType newSampleOutputType() {
-    return new RowType(List.of("foo", "bar"), List.of(new IntegerType(), new IntegerType()));
+  public static ColumnStatsSpec newSampleColumnStatsSpec() {
+    return new ColumnStatsSpec(
+        ImmutableList.of(FieldAccessTypedExpr.create(new IntegerType(), "foo")),
+        AggregateStep.PARTIAL,
+        ImmutableList.of("sum"),
+        ImmutableList.of(SerdeTests.newSampleAggregate()));
+  }
+
+  public static WindowFunction newSampleWindowFunction() {
+    final CallTypedExpr call =
+        new CallTypedExpr(
+            new IntegerType(),
+            Collections.singletonList(FieldAccessTypedExpr.create(new IntegerType(), "foo")),
+            "sum");
+    final WindowFrame frame =
+        new WindowFrame(
+            WindowType.ROWS, BoundType.UNBOUNDED_PRECEDING, null, BoundType.CURRENT_ROW, null);
+    return new WindowFunction(call, frame, true);
+  }
+
+  public static WindowNode newSampleWindowNode(String windowNodeId, String scanNodeId) {
+    final RowType rowType = SerdeTests.newSampleOutputType();
+    final PlanNode scan = SerdeTests.newSampleTableScanNode(scanNodeId, rowType);
+    final CallTypedExpr call =
+        new CallTypedExpr(
+            new IntegerType(),
+            Collections.singletonList(FieldAccessTypedExpr.create(new IntegerType(), "foo")),
+            "sum");
+    final WindowFrame frame =
+        new WindowFrame(WindowType.RANGE, BoundType.PRECEDING, null, BoundType.FOLLOWING, null);
+    return new WindowNode(
+        windowNodeId,
+        ImmutableList.of(FieldAccessTypedExpr.create(new IntegerType(), "bar")),
+        ImmutableList.of(FieldAccessTypedExpr.create(new IntegerType(), "foo")),
+        ImmutableList.of(new SortOrder(true, false)),
+        ImmutableList.of("sum_out"),
+        ImmutableList.of(new WindowFunction(call, frame, true)),
+        true,
+        ImmutableList.of(scan));
   }
 
   public static class ObjectAndJson<T> {
@@ -288,6 +368,27 @@ private static void assertJsonEquals(String expected, String actual) {
 
     public String getJson() {
       return json;
+    }
+  }
+
+  private static byte[] serialize(final Serializable obj) {
+    final ByteArrayOutputStream baos = new ByteArrayOutputStream(512);
+    try (ObjectOutputStream out = new ObjectOutputStream(baos)) {
+      out.writeObject(obj);
+    } catch (IOException e) {
+      throw new VeloxException(e);
+    }
+    return baos.toByteArray();
+  }
+
+  private static <T> T deserialize(final byte[] objectData) {
+    Preconditions.checkNotNull(objectData, "objectData");
+    try (ObjectInputStream in = new ObjectInputStream(new ByteArrayInputStream(objectData))) {
+      @SuppressWarnings("unchecked")
+      final T obj = (T) in.readObject();
+      return obj;
+    } catch (final ClassNotFoundException | IOException | NegativeArraySizeException ex) {
+      throw new VeloxException(ex);
     }
   }
 }
