@@ -1,4 +1,25 @@
+/*
+* Licensed to the Apache Software Foundation (ASF) under one or more
+* contributor license agreements.  See the NOTICE file distributed with
+* this work for additional information regarding copyright ownership.
+* The ASF licenses this file to You under the Apache License, Version 2.0
+* (the "License"); you may not use this file except in compliance with
+* the License.  You may obtain a copy of the License at
+*
+*    http://www.apache.org/licenses/LICENSE-2.0
+*
+* Unless required by applicable law or agreed to in writing, software
+* distributed under the License is distributed on an "AS IS" BASIS,
+* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+* See the License for the specific language governing permissions and
+* limitations under the License.
+*/
 package io.github.zhztheplayer.velox4j.serde;
+
+import com.google.common.collect.ImmutableList;
+import org.junit.Assert;
+import org.junit.BeforeClass;
+import org.junit.Test;
 
 import io.github.zhztheplayer.velox4j.exception.VeloxException;
 import io.github.zhztheplayer.velox4j.test.Velox4jTests;
@@ -23,11 +44,6 @@ import io.github.zhztheplayer.velox4j.type.TinyIntType;
 import io.github.zhztheplayer.velox4j.type.UnknownType;
 import io.github.zhztheplayer.velox4j.type.VarCharType;
 import io.github.zhztheplayer.velox4j.type.VarbinaryType;
-import org.junit.Assert;
-import org.junit.BeforeClass;
-import org.junit.Test;
-
-import java.util.List;
 
 public class TypeSerdeTest {
 
@@ -103,14 +119,17 @@ public class TypeSerdeTest {
 
   @Test
   public void testRowType() {
-    SerdeTests.testISerializableRoundTrip(new RowType(List.of("foo", "bar"),
-        List.of(new IntegerType(), new VarCharType())));
+    SerdeTests.testISerializableRoundTrip(
+        new RowType(
+            ImmutableList.of("foo", "bar"),
+            ImmutableList.of(new IntegerType(), new VarCharType())));
   }
 
   @Test
   public void testFunctionType() {
-    SerdeTests.testISerializableRoundTrip(FunctionType.create(List.of(
-        new IntegerType(), new VarCharType()), new VarbinaryType()));
+    SerdeTests.testISerializableRoundTrip(
+        FunctionType.create(
+            ImmutableList.of(new IntegerType(), new VarCharType()), new VarbinaryType()));
   }
 
   @Test
@@ -120,7 +139,8 @@ public class TypeSerdeTest {
 
   @Test
   public void testOpaqueType() {
-    Assert.assertThrows(VeloxException.class, () -> SerdeTests.testISerializableRoundTrip(new OpaqueType("foo")));
+    Assert.assertThrows(
+        VeloxException.class, () -> SerdeTests.testISerializableRoundTrip(new OpaqueType("foo")));
   }
 
   @Test
